--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weekly-tf",
+  "name": "superhero-tf",
   "version": "1.0.0",
   "description": "Spawn TensorFlow servers to run tasks",
   "main": "server.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mapmeld/weekly-tf.git"
+    "url": "git+https://github.com/mapmeld/superhero-tf.git"
   },
   "keywords": [
     "tensorflow",
@@ -17,18 +17,23 @@
   "author": "Nick Doiron <ndoiron@mapmeld.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mapmeld/weekly-tf/issues"
+    "url": "https://github.com/mapmeld/superhero-tf/issues"
   },
-  "homepage": "https://github.com/mapmeld/weekly-tf#readme",
+  "homepage": "https://github.com/mapmeld/superhero-tf#readme",
   "dependencies": {
     "aws-cli-js": "^2.0.2",
     "koa": "^2.0.0-alpha.7",
     "koa-bodyparser": "^3.2.0",
+    "koa-compress": "^1.0.9",
     "koa-convert": "^1.2.0",
     "koa-csrf": "^3.0.4",
     "koa-generic-session": "^1.11.4",
+    "koa-jade-render": "^1.0.0",
+    "koa-logger": "^2.0.0",
     "koa-passport": "^3.0.0-rc.2",
     "koa-route": "^3.2.0",
+    "koa-router": "^7.0.1",
+    "koa-static": "^2.0.0",
     "passport-facebook": "^2.1.1",
     "passport-google-auth": "^1.0.1",
     "passport-local": "^1.0.0",
