--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Spawn TensorFlow servers to run tasks",
   "main": "server.js",
   "scripts": {
+    "start": "node app.js",
     "test": "mocha"
   },
   "repository": {
@@ -28,12 +29,14 @@
     "koa-convert": "^1.2.0",
     "koa-csrf": "^3.0.4",
     "koa-generic-session": "^1.11.4",
+    "koa-generic-session-mongo": "^0.3.0",
     "koa-jade-render": "^1.0.0",
     "koa-logger": "^2.0.0",
     "koa-passport": "^3.0.0-rc.2",
     "koa-route": "^3.2.0",
     "koa-router": "^7.0.1",
     "koa-static": "^2.0.0",
+    "mongoose": "^4.7.2",
     "passport-facebook": "^2.1.1",
     "passport-google-auth": "^1.0.1",
     "passport-local": "^1.0.0",
